@@ -16,9 +16,9 @@
  */
 package org.apache.solr;
 
-import com.google.common.collect.ImmutableMap;
 import java.io.StringWriter;
 import java.util.Collections;
+import java.util.Map;
 import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.core.CoreContainer;
@@ -50,7 +50,7 @@ public class TestCrossCoreJoin extends SolrTestCaseJ4 {
     initCore("solrconfig.xml", "schema12.xml", TEST_HOME(), "collection1");
     final CoreContainer coreContainer = h.getCoreContainer();
 
-    fromCore = coreContainer.create("fromCore", ImmutableMap.of("configSet", "minimal"));
+    fromCore = coreContainer.create("fromCore", Map.of("configSet", "minimal"));
 
     assertU(
         add(
@@ -195,7 +195,7 @@ public class TestCrossCoreJoin extends SolrTestCaseJ4 {
     assertFalse(fromCore.isClosed());
     assertFalse(h.getCore().isClosed());
 
-    // find people that develop stuff - but limit via filter query to a name of "john"
+    // find people that develop stuff - but limit via filter query to a name of "john",
     // this tests filters being pushed down to queries (SOLR-3062)
     assertJQ(
         req(
